--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Sarju-P/Movie-Rental-Application-Backend/issues"
   },
-  "homepage": "https://github.com/Sarju-P/Movie-Rental-Application-Backend#readme"
+  "homepage": "https://github.com/Sarju-P/Movie-Rental-Application-Backend#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
